# cpp-project

./: .codacy.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yaml  conanfile.txt  lgtm.yml  mkdocs.yml  readthedocs.yml  setup.sh
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  ---support-question.md
.github/workflows/: build.yml  ci.yml  github-action.yml
app/: main.cc
cmake/: coverage.cmake  cppcheck.cmake  cpplint.cmake  include.cmake
docs/: index.md
include/example/: example-config.h.in  example.h
src/: example.cc
tests/: CMakeLists.txt  dummy.cc
